# realmate-challenge

./: .dockerignore  .env.example  .flake8  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: django.yml  tests.yml
apps/webhook_handler/: admin.py  apps.py  factories.py  mixins.py  models.py  serializers.py  services.py  tasks.py  urls.py  views.py
apps/webhook_handler/migrations/: 0001_initial.py
apps/webhook_handler/tests/: test_services.py
frontend/src/: App.css  App.tsx
realmate-challenge-back/: .env.example  manage.py
realmate-challenge-back/realmate/: asgi.py  settings.py  urls.py  wsgi.py
realmate-challenge-back/webhook_handler/: mixins.py  serializers.py  services.py  tasks.py  urls.py  views.py
realmate_challenge/: celery.py  settings.py  settings_ci.py  urls.py
