[tool.poetry]
name = "realmate-challenge"
version = "0.1.0"
description = ""
authors = ["Marcelo Jorge <marcelojorgea@gmail.com>"]
readme = "README.md"
package-mode = false
packages = [
    { include = "apps" },
    { include = "realmate_challenge" }
]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
django = ">=5.1.6,<6.0.0"
celery = ">=5.3.0"
redis = ">=5.0.0"
django-celery-results = ">=2.5.0"
djangorestframework = ">=3.14.0"
django-cors-headers = "^4.3.1"
python-dotenv = "^1.0.1"
gunicorn = "^21.2.0"
psycopg2-binary = "^2.9.9"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-django = "^4.7.0"
factory-boy = "^3.3.0"
pytest-factoryboy = "^2.6.0"
flake8 = "^7.1.2"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "realmate_challenge.settings"
python_files = ["test_*.py", "*_test.py", "tests.py"]
addopts = "-v -s --strict-markers"
testpaths = ["apps"]
